# RAG-study-project

./: .gitignore  main.py  pyproject.toml  streamlit_ui.py
src/agents/: pydantic_ai_expert.py
src/etl/: pydantic_ai_etl.py
src/services/: chromaDB.py
src/utils/: crawlers.py  text_splitters.py
